Fix spacing issues with speaker bios

--- a/monochrome-pro/style-front.css
+++ b/monochrome-pro/style-front.css
@@ -4,7 +4,7 @@
  Description: IA Conference tweaks to base theme
  Author: Anita Cheng & Nathan Rogers
  Author URI: https://github.com/AnitaYCheng
- Version: 1.1.1
+ Version: 1.1.1.3
 */
 
 /* Front Page
@@ -547,14 +547,9 @@ p .line {
 
 .front-page-7 {
 	background: rgb(255, 106, 57);
+	color: rgb(0, 0, 0);
 }
 
-/**
- * Workaround for CSS attributes on region
- */
-.front-page-7.blue {
-	background: rgb(255, 106, 57);
-}
 .front-page-7 h3 {
 	text-align:left;
 }
